--- a/classpage.html
+++ b/classpage.html
@@ -3,9 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Class Page</title>
+    <link rel="stylesheet" href="./front-end/styles/classpage.css">
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"/>
+    <title>Document</title>
 </head>
 <body>
-    
+    <div class="page-navbar">
+        <div class="page-left-navbar">
+            <div id="page-burger-icon" class="page-icon-burger-icon">
+                <i class="fa-solid fa-bars fa-lg burger-icon"></i>
+            </div>
+            <div class="navbar-text">
+                <div class="upper-text">
+                    <span>FSW 23&24 | Soft Skills</span>
+                </div>
+                <div class="lower-text">
+                    <span>Full Stack Web Development Bootcamp</span>
+                </div>
+            </div>
+        </div>
+        <div class="buttons">
+            <div><a>Stream</a></div>
+            <div><a>Classroom</a></div>
+            <div><a>People</a></div>
+        </div>
+        <div class="page-right-navbar">
+            <div class="google-apps-icon">
+                <i class="fa-solid fa-border-none fa-lg"></i>
+            </div>
+            <div class="page-profile-pic"><img
+                src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                alt="profile picture"></div>
+        </div>
+    </div>
+    <div class="subjects">
+        <div class="background-image">
+            <div class="Title">
+                <h1>FSW 23&24 | Soft Skills</h1>
+                <span>Full Stack Web Development Bootcamp</span>
+            </div>
+        </div>
+        <div>
+            <div class="meet">
+                <div class="meeting-class">
+                    <div class="video-logo"><img src="image/video-logo.png" alt="video"></div>
+                </div>
+                <div>
+                    <button class="join">Join</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
