--- a/classrooms.html
+++ b/classrooms.html
@@ -104,9 +104,10 @@
             <div class="modal hide">
                 <div class="modal-box">
                     <div class="modal-header">Create class</div>
-                    <div class="inputs">
+                    <form>
+                        <div class="inputs">
                         <div>
-                            <input id="classname-input" placeholder="Class name (required)" type="text">
+                            <input required id="classname-input" placeholder="Class name (required)" type="text">
                         </div>
                         <div>
                             <input id="section-input" placeholder="Section" type="text">
@@ -126,6 +127,7 @@
                             <button>Create</button>
                         </div>
                     </div>
+                    </form>
                 </div>
             </div>
             <script src="front-end/js/axios.min.js"></script>
