Implmented return ass_ann.php

--- a/classrooms.html
+++ b/classrooms.html
@@ -67,7 +67,7 @@
         </div>
       </div>
       <div class="bottom-classrooms">
-        <div class="class">
+        <!-- <div class="class">
           <div class="top-class">
             <div class="class-title">
               <p>FSW 23&24 | Soft Skils</p>
@@ -139,7 +139,7 @@
               <i class="fa-regular fa-folder fa-lg"></i>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div class="class">
           <div class="top-class">
