--- a/classroom.html
+++ b/classroom.html
@@ -25,11 +25,9 @@
                 </div>
             </div>
             <div class="tabs">
-                <ul>
-                    <li>Stream</li>
-                    <li>Classwork</li>
-                    <li>People</li>
-                </ul>
+                <div>Stream</div>
+                <div>Classwork</div>
+                <div>People</div>
             </div>
             <div class="right-classroom-navbar">
                 <div class="settings-icon">
@@ -39,7 +37,9 @@
                     <i class="fa-solid fa-border-none fa-lg"></i>
                 </div>
                 <div class="profile-pic">
-                    <img src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb" alt="profile picture">
+                    <img
+                        src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                        alt="profile picture">
                 </div>
             </div>
         </div>
