--- a/classroom.html
+++ b/classroom.html
@@ -43,10 +43,89 @@
                 </div>
             </div>
         </div>
-        <script src="front-end/js/axios.min.js"></script>
-        <script src="front-end/js/script.js"></script>
-        <script>
-            pages.loadFor("classroom");
-        </script>
-    </body>
-</html>
+        <div class="main">
+            <div class="top-main">
+                <div>
+                    <div>
+                        <i class="fa-solid fa-pen"></i>
+                    </div>
+                    <div>Customize</div>
+                </div>
+                <div>
+                    <div class="classsroom-data">
+                        <div class="classroom-name">Group Project</div>
+                        <div class="classroom-section">Section A</div>
+                    </div>
+                    <div>i</div>
+                </div>
+            </div>
+            <div class="bottom-main">
+                <div class="bottom-left-main">
+                    <div class="google-meet">
+                        <div>
+                            <div>Class code</div>
+                            <div>
+                                <i class="fa-solid fa-ellipsis-vertical"></i>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="google-meet-link">nhucw3p</div>
+                            <div>
+                                <i class="fa-solid fa-expand"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <p>Upcoming</p>
+                        <p>No work due soon</p>
+                        <div>View all</div>
+                    </div>
+                </div>
+                <div class="bottom-right-main">
+                    <div class="announcement-input">
+                        <div class="profile-pic"><img
+                            src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                            alt="profile-pic"></div>
+                        <div><input placeholder="Announce something to your class" type="text"></div>
+                        <div>
+                            <i class="fa-solid fa-share-from-square"></i>
+                        </div>
+                    </div>
+                    <div class="announcements">
+                        <div class="announcement">
+                            <div class="annoncement-top">
+                                <div class="announcement-header">
+                                    <div>
+                                        <div class="profile-pic"><img
+                                            src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                                            alt="profile-picture"></div>
+                                        <div>
+                                            <div class="name">Joe Haddad</div>
+                                            <p class="date">02:32</p>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                                    </div>
+                                </div>
+                                <div class="announcement-comment">
+                                    <div class="profile-pic"><img
+                                        src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                                        alt="profile-picture"></div>
+                                    <div class="comment-input"><input placeholder="Add class comment" type="text"></div>
+                                    <div class="share-icon">
+                                        <i class="fa-solid fa-share"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <script src="front-end/js/axios.min.js"></script>
+            <script src="front-end/js/script.js"></script>
+            <script>
+                pages.loadFor("classroom");
+            </script>
+        </body>
+    </html>
