--- a/classroom.html
+++ b/classroom.html
@@ -45,14 +45,14 @@
         </div>
         <div class="main">
             <div class="top-main">
-                <div>
+                <div class="customize-button">
                     <div>
                         <i class="fa-solid fa-pen"></i>
                     </div>
                     <div>Customize</div>
                 </div>
                 <div>
-                    <div class="classsroom-data">
+                    <div class="classroom-data">
                         <div class="classroom-name">Group Project</div>
                         <div class="classroom-section">Section A</div>
                     </div>
@@ -64,18 +64,18 @@
                     <div class="google-meet">
                         <div>
                             <div>Class code</div>
-                            <div>
+                            <div class="icon">
                                 <i class="fa-solid fa-ellipsis-vertical"></i>
                             </div>
                         </div>
                         <div>
                             <div class="google-meet-link">nhucw3p</div>
-                            <div>
+                            <div class="icon">
                                 <i class="fa-solid fa-expand"></i>
                             </div>
                         </div>
                     </div>
-                    <div>
+                    <div class="assignments">
                         <p>Upcoming</p>
                         <p>No work due soon</p>
                         <div>View all</div>
@@ -93,9 +93,9 @@
                     </div>
                     <div class="announcements">
                         <div class="announcement">
-                            <div class="annoncement-top">
-                                <div class="announcement-header">
-                                    <div>
+                            <div class="announcement-top">
+                                <div>
+                                    <div class="user-data">
                                         <div class="profile-pic"><img
                                             src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
                                             alt="profile-picture"></div>
@@ -105,17 +105,52 @@
                                         </div>
                                     </div>
                                     <div>
-                                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                                        <i class="fa-solid fa-ellipsis-vertical fa-lg"></i>
                                     </div>
                                 </div>
-                                <div class="announcement-comment">
-                                    <div class="profile-pic"><img
-                                        src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
-                                        alt="profile-picture"></div>
-                                    <div class="comment-input"><input placeholder="Add class comment" type="text"></div>
-                                    <div class="share-icon">
-                                        <i class="fa-solid fa-share"></i>
+                                <div class="announcement-content">
+                                    Mohammad Hussein was here
+                                </div>
+                            </div>
+                            <div class="announcement-comment">
+                                <div class="profile-pic"><img
+                                    src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                                    alt="profile-picture"></div>
+                                <div class="comment-input"><input placeholder="Add class comment" type="text"></div>
+                                <div class="share-icon">
+                                    <i class="fa-solid fa-share"></i>
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="announcement">
+                            <div class="announcement-top">
+                                <div>
+                                    <div class="user-data">
+                                        <div class="profile-pic"><img
+                                            src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                                            alt="profile-picture"></div>
+                                        <div>
+                                            <div class="name">Joe Haddad</div>
+                                            <p class="date">02:32</p>
+                                        </div>
                                     </div>
+                                    <div>
+                                        <i class="fa-solid fa-ellipsis-vertical fa-lg"></i>
+                                    </div>
+                                </div>
+                                <div class="announcement-content">
+                                    Mohammad Hussein was here
+                                </div>
+                            </div>
+                            <div class="announcement-comment">
+                                <div class="profile-pic"><img
+                                    src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                                    alt="profile-picture"></div>
+                                <div class="comment-input"><input placeholder="Add class comment" type="text"></div>
+                                <div class="share-icon">
+                                    <i class="fa-solid fa-share"></i>
                                 </div>
                             </div>
                         </div>
