styled the classwork page

--- a/classwork.html
+++ b/classwork.html
@@ -52,42 +52,84 @@
                     <p>Soft Skills</p>
                 </div>
             </div>
-            <div>
-                <div>
+            <div class="classwork-right">
+                <div class="classwork-header">
                     <div class="button">
-                        <div>icon</div>
+                        <div>
+                            <i class="fa-solid fa-plus"></i>
+                        </div>
                         <div>Create</div>
                     </div>
-                    <div>
+                    <div class="apps">
                         <div>
-                            <div>icon</div>
+                            <div>
+                                <i class="fa-regular fa-calendar"></i>
+                            </div>
                             <p>Google Calendar</p>
                         </div>
                         <div>
-                            <div>icon</div>
+                            <div>
+                                <i class="fa-brands fa-google-drive"></i>
+                            </div>
                             <p>Class Drive folder</p>
                         </div>
                     </div>
                 </div>
                 <div class="topics">
-                    <div class="topic-header">
-                        <div class="topic-name"></div>
-                        <div>icon</div>
-                    </div>
-                    <div class="assignments">
-                        <div class="assignment">
+                    <div class="topic">
+                        <div class="topic-header">
+                            <div class="topic-name">UIX</div>
                             <div>
-                                <div>icon</div>
-                                <div class="assignment-name">Assignment One</div>
+                                <i class="fa-solid fa-ellipsis-vertical"></i>
                             </div>
-                            <div class="date">Posted 2:36PM</div>
                         </div>
-                        <div class="assignment">
-                            <div>
-                                <div>icon</div>
-                                <div class="assignment-name">Assignment One</div>
+                        <div class="assignments">
+                            <div class="assignment">
+                                <div class="assignment-data">
+                                    <div>
+                                        <i class="fa-regular fa-rectangle-list fa-lg"></i>
+                                    </div>
+                                    <div class="assignment-name">Assignment One</div>
+                                </div>
+                                <div class="date">Posted 2:36PM</div>
                             </div>
-                            <div class="date">Posted 2:36PM</div>
+                            <div class="assignment">
+                                <div class="assignment-data">
+                                    <div>
+                                        <i class="fa-regular fa-rectangle-list fa-lg"></i>
+                                    </div>
+                                    <div class="assignment-name">Assignment One</div>
+                                </div>
+                                <div class="date">Posted 2:36PM</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="topic">
+                        <div class="topic-header">
+                            <div class="topic-name">UIX</div>
+                            <div>
+                                <i class="fa-solid fa-ellipsis-vertical"></i>
+                            </div>
+                        </div>
+                        <div class="assignments">
+                            <div class="assignment">
+                                <div class="assignment-data">
+                                    <div>
+                                        <i class="fa-regular fa-rectangle-list fa-lg"></i>
+                                    </div>
+                                    <div class="assignment-name">Assignment One</div>
+                                </div>
+                                <div class="date">Posted 2:36PM</div>
+                            </div>
+                            <div class="assignment">
+                                <div class="assignment-data">
+                                    <div>
+                                        <i class="fa-regular fa-rectangle-list fa-lg"></i>
+                                    </div>
+                                    <div class="assignment-name">Assignment One</div>
+                                </div>
+                                <div class="date">Posted 2:36PM</div>
+                            </div>
                         </div>
                     </div>
                 </div>
