--- a/people.html
+++ b/people.html
@@ -37,6 +37,11 @@
                 <div>
                     <i class="fa-solid fa-border-none fa-lg"></i>
                 </div>
+                <div class="profile-pic">
+                    <img
+                        src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                        alt="profile picture">
+                </div>
             </div>
         </div>
         <div class="people-content">
@@ -78,6 +83,71 @@
                         </div>
                         <div class="student-name">Charbel Dauod</div>
                     </div>
+                    <div class="student">
+                        <div class="profile-pic">
+                            <img
+                                src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                                alt="profile picture">
+                        </div>
+                        <div class="student-name">Charbel Dauod</div>
+                    </div>
+                    <div class="student">
+                        <div class="profile-pic">
+                            <img
+                                src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                                alt="profile picture">
+                        </div>
+                        <div class="student-name">Charbel Dauod</div>
+                    </div>
+                    <div class="student">
+                        <div class="profile-pic">
+                            <img
+                                src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                                alt="profile picture">
+                        </div>
+                        <div class="student-name">Charbel Dauod</div>
+                    </div>
+                    <div class="student">
+                        <div class="profile-pic">
+                            <img
+                                src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                                alt="profile picture">
+                        </div>
+                        <div class="student-name">Charbel Dauod</div>
+                    </div>
+                    <div class="student">
+                        <div class="profile-pic">
+                            <img
+                                src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                                alt="profile picture">
+                        </div>
+                        <div class="student-name">Charbel Dauod</div>
+                    </div>
+                    <div class="student">
+                        <div class="profile-pic">
+                            <img
+                                src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                                alt="profile picture">
+                        </div>
+                        <div class="student-name">Charbel Dauod</div>
+                    </div>
+                    <div class="student">
+                        <div class="profile-pic">
+                            <img
+                                src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                                alt="profile picture">
+                        </div>
+                        <div class="student-name">Charbel Dauod</div>
+                    </div>
+                    <div class="student">
+                        <div class="profile-pic">
+                            <img
+                                src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                                alt="profile picture">
+                        </div>
+                        <div class="student-name">Charbel Dauod</div>
+                    </div>
+                    
                 </div>
             </div>
         </div>
