implemented the structure of the drop down for creating assignment-topic

--- a/classwork.html
+++ b/classwork.html
@@ -59,6 +59,20 @@
                             <i class="fa-solid fa-plus"></i>
                         </div>
                         <div>Create</div>
+                        <div class="list">
+                            <div class="list-item">
+                                <div class="icon">
+                                    <i class="fa-solid fa-clipboard-list"></i>
+                                </div>
+                                <div class="list-title">Assignment</div>
+                            </div>
+                            <div class="list-item">
+                                <div class="icon">
+                                    <i class="fa-solid fa-rectangle-list"></i>
+                                </div>
+                                <div class="list-title">Topic</div>
+                            </div>
+                        </div>
                     </div>
                     <div class="apps">
                         <div>
