--- a/people.html
+++ b/people.html
@@ -46,7 +46,7 @@
         </div>
         <div class="people-content">
             <div class="teacher">
-                <div class="title">Teacher</div>
+                <div class="teacher-title">Teacher</div>
                 <div class="teacher-data">
                     <div class="profile-pic">
                         <img
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="students-section">
-                <div class="title">Students</div>
+                <div class="student-title"><div>Students</div><div class="students-number">47 students</div></div>
                 <div class="students">
                     <div class="student">
                         <div class="profile-pic">
@@ -147,7 +147,7 @@
                         </div>
                         <div class="student-name">Charbel Dauod</div>
                     </div>
-                    
+
                 </div>
             </div>
         </div>
