styled the drop down for creating assignment-topic

--- a/classwork.html
+++ b/classwork.html
@@ -62,13 +62,13 @@
                         <div class="list">
                             <div class="list-item">
                                 <div class="icon">
-                                    <i class="fa-solid fa-clipboard-list"></i>
+                                    <i class="fa-solid fa-clipboard-list fa-xl"></i>
                                 </div>
                                 <div class="list-title">Assignment</div>
                             </div>
                             <div class="list-item">
                                 <div class="icon">
-                                    <i class="fa-solid fa-rectangle-list"></i>
+                                    <i class="fa-solid fa-rectangle-list ga-xl"></i>
                                 </div>
                                 <div class="list-title">Topic</div>
                             </div>
