implemented the functionality of the drop down in javascript

--- a/classwork.html
+++ b/classwork.html
@@ -54,12 +54,12 @@
             </div>
             <div class="classwork-right">
                 <div class="classwork-header">
-                    <div class="button">
+                    <div id="create-button" class="button">
                         <div>
                             <i class="fa-solid fa-plus"></i>
                         </div>
                         <div>Create</div>
-                        <div class="list">
+                        <div id="drop-down" class="list hide">
                             <div class="list-item">
                                 <div class="icon">
                                     <i class="fa-solid fa-clipboard-list fa-xl"></i>
