created the structure and styled the modal to create a new topic

--- a/classwork.html
+++ b/classwork.html
@@ -15,6 +15,16 @@
         <title>Classwork</title>
     </head>
     <body>
+        <div id="topic-modal" class="add-topic-modal hide">
+            <div id="topic-box" class="box">
+                <p>Add topic</p>
+                <div><input placeholder="Topic" type="text"></div>
+                <div class="buttons">
+                    <button>Cancel</button>
+                    <button>Add</button>
+                </div>
+            </div>
+        </div>
         <div class="classroom-navbar">
             <div class="left-classroom-navbar">
                 <div id="burgerIcon" class="icon burger-icon">
@@ -70,7 +80,7 @@
                                 <div class="icon">
                                     <i class="fa-solid fa-rectangle-list ga-xl"></i>
                                 </div>
-                                <div class="list-title">Topic</div>
+                                <div id="create-topic-button" class="list-title">Topic</div>
                             </div>
                         </div>
                     </div>
