implemented the show-hide functionality of the topic modal in js

--- a/classwork.html
+++ b/classwork.html
@@ -20,7 +20,7 @@
                 <p>Add topic</p>
                 <div><input placeholder="Topic" type="text"></div>
                 <div class="buttons">
-                    <button>Cancel</button>
+                    <button class="cancel-button">Cancel</button>
                     <button>Add</button>
                 </div>
             </div>
@@ -76,11 +76,11 @@
                                 </div>
                                 <div class="list-title">Assignment</div>
                             </div>
-                            <div class="list-item">
+                            <div id="create-topic-button" class="list-item">
                                 <div class="icon">
                                     <i class="fa-solid fa-rectangle-list ga-xl"></i>
                                 </div>
-                                <div id="create-topic-button" class="list-title">Topic</div>
+                                <div class="list-title">Topic</div>
                             </div>
                         </div>
                     </div>
