--- a/teacher_people.html
+++ b/teacher_people.html
@@ -57,7 +57,12 @@
                 </div>
             </div>
             <div class="students-section">
-                <div class="student-title"><div>Students</div><div class="students-number">47 students</div></div>
+                <div class="student-title">
+                    <div>Students</div>
+                    <div class="students-number">
+                        <i class="fa-solid fa-user-plus"></i>
+                    </div>
+                </div>
                 <div class="students">
                     <div class="student">
                         <div class="profile-pic">
@@ -155,7 +160,7 @@
     <script src="front-end/js/axios.min.js"></script>
     <script src="front-end/js/script.js"></script>
     <script>
-        pages.loadFor("classroom");
+        pages.loadFor("teacher_people");
     </script>
 </body>
 </html>
