--- a/student_stream.html
+++ b/student_stream.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./front-end/styles/index.css">
         <link rel="stylesheet" href="./front-end/styles/classroom.css">
+        <link rel="stylesheet" href="./front-end/styles/student-stream.css">
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -32,9 +33,9 @@
                 <div>People</div>
             </div>
             <div class="right-classroom-navbar">
-                <div class="settings-icon">
+                <!-- <div class="settings-icon">
                     <i class="fa-solid fa-gear fa-lg"></i>
-                </div>
+                </div> -->
                 <div>
                     <i class="fa-solid fa-border-none fa-lg"></i>
                 </div>
@@ -45,36 +46,38 @@
                 </div>
             </div>
         </div>
-        <div class="main">
+        <div class="main" style="margin-top: 20px;">
             <div class="top-main">
-                <div class="customize-button">
+                <!-- <div class="customize-button">
                     <div>
                         <i class="fa-solid fa-pen"></i>
                     </div>
                     <div>Customize</div>
-                </div>
-                <div>
+                </div> -->
+                <div style="margin-top: auto;">
                     <div class="classroom-data">
                         <div class="classroom-name">Group Project</div>
                         <div class="classroom-section">Section A</div>
                     </div>
-                    <div>i</div>
+                    <div style="visibility: hidden;">i</div>
                 </div>
             </div>
             <div class="bottom-main">
                 <div class="bottom-left-main">
                     <div class="google-meet">
-                        <div>
-                            <div>Class code</div>
+                        <div class="google-meet-top">
+                            <div>
+                                <div class="google-meet-logo"><img
+                                    src="./front-end/assets/logo_meet_2020q4_color_2x_web_96dp.png"
+                                    alt="Google Meet"></div>
+                                <div>Meet</div>
+                            </div>
                             <div class="icon">
                                 <i class="fa-solid fa-ellipsis-vertical"></i>
                             </div>
                         </div>
                         <div>
-                            <div class="google-meet-link">nhucw3p</div>
-                            <div class="icon">
-                                <i class="fa-solid fa-expand"></i>
-                            </div>
+                            <button>Join</button>
                         </div>
                     </div>
                     <div class="assignments">
@@ -84,7 +87,7 @@
                     </div>
                 </div>
                 <div class="bottom-right-main">
-                    <div id="announcement-input" class="announcement-input">
+                    <!-- <div id="announcement-input" class="announcement-input">
                         <div id="first-state-announcement">
                             <div class="profile-pic"><img
                                 src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
@@ -131,7 +134,7 @@
                             </div>
                         </div>
 
-                    </div>
+                    </div> -->
                     <div class="announcements">
                         <div class="announcement">
                             <div class="announcement-top">
@@ -153,16 +156,6 @@
                                     Mohammad Hussein was here
                                 </div>
                             </div>
-                            <div class="announcement-comment">
-                                <div class="profile-pic"><img
-                                    src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
-                                    alt="profile-picture"></div>
-                                <div class="comment-input"><input placeholder="Add class comment" type="text"></div>
-                                <div class="share-icon">
-                                    <i class="fa-solid fa-share"></i>
-                                </div>
-                            </div>
-
                         </div>
 
                         <div class="announcement">
@@ -185,15 +178,6 @@
                                     Mohammad Hussein was here
                                 </div>
                             </div>
-                            <div class="announcement-comment">
-                                <div class="profile-pic"><img
-                                    src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
-                                    alt="profile-picture"></div>
-                                <div class="comment-input"><input placeholder="Add class comment" type="text"></div>
-                                <div class="share-icon">
-                                    <i class="fa-solid fa-share"></i>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -211,7 +195,7 @@
             <script src="front-end/js/axios.min.js"></script>
             <script src="front-end/js/script.js"></script>
             <script>
-                pages.loadFor("classroom");
+                pages.loadFor("student_stream");
             </script>
 
         </body>
