implemented the toggling of the create-assignment modal

--- a/teacher_classwork.html
+++ b/teacher_classwork.html
@@ -18,10 +18,10 @@
     </head>
     <body>
         <!-- ASSIGNMENT MODAL -->
-        <div id="modal-assignmet" class="modal-assignment">
+        <div id="modal-assignment" class="modal-assignment hide">
             <div class="modal-assignment-header">
                 <div class="modal-assignment-header-left">
-                    <div class="x-icon">
+                    <div id="close-assignment" class="x-icon">
                         <i class="fa-solid fa-x"></i>
                     </div>
                     <div>
@@ -117,6 +117,7 @@
                 </div>
             </div>
         </div>
+        <!-- NAVBAR -->
         <div class="classroom-navbar">
             <div class="left-classroom-navbar">
                 <div id="burgerIcon" class="icon burger-icon">
@@ -161,8 +162,8 @@
                             <i class="fa-solid fa-plus"></i>
                         </div>
                         <div>Create</div>
-                        <div id="drop-down" class="list hide">
-                            <div class="list-item">
+                        <div  id="drop-down" class="list hide">
+                            <div id="create-assignment-button" class="list-item">
                                 <div class="icon">
                                     <i class="fa-solid fa-clipboard-list fa-xl"></i>
                                 </div>
