--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
                 <div class="bottom-signin-box">
                     <div class="inputs">
                         <div>
-                            <input id="email_in" type="email" placeholder="Email or phone">
-                            <p class="forgot-password">Forgot email?</p>
+                            <input minlength="6" id="email" type="email" placeholder="Email">
+                            <!-- <p class="forgot-password">Forgot email?</p> -->
                         </div>
-                        <div>
+                        <!-- <div>
                             <input id="password_in" type="password" placeholder="Enter your password">
                             <div class="show-password">
                                 <input id="show-password-input" type="checkbox">
                                 <label for="show-password-input">Show password</label>
                             </div>
-                        </div>
-                        <p class="error"></p>
+                        </div> -->
+                        <p class="error">Your email is not valid</p>
                     </div>
                     <div>
                         <p>Not your computer? Use Guest mode to sign in privately.</p>
@@ -47,7 +47,7 @@
                             <a href="signup.html">Create account</a>
                         </div>
                         <div class="next-button">
-                            <button id="login">Log in</button>
+                            <button id="next">Next</button>
                         </div>
                     </div>
                 </div>
