splited the login page into 2 pages

--- a/signin-password.html
+++ b/signin-password.html
@@ -14,7 +14,7 @@
         <title>Sign in</title>
     </head>
     <body>
-        <div class="main">
+        <div class="main signin-password">
             <div class="signin-box">
                 <div class="top-signin-box">
                     <div><img src="./front-end//assets/GoogleLogo.png" alt="Google Logo"></div>
@@ -24,32 +24,32 @@
                 <div class="bottom-signin-box">
                     <div class="inputs">
 
-                        <div>
+                        <!-- <div>
                             <form><input minlength="6" id="email" type="email" placeholder="Email"></form>
                             
-                            <!-- <p class="forgot-password">Forgot email?</p> -->
-                        </div>
-                        <!-- <div>
-                            <input id="password_in" type="password" placeholder="Enter your password">
+                            <p class="forgot-password">Forgot email?</p>
+                        </div> -->
+                        <div>
+                            <input id="password_input" type="password" placeholder="Enter your password">
                             <div class="show-password">
                                 <input id="show-password-input" type="checkbox">
                                 <label for="show-password-input">Show password</label>
                             </div>
-                        </div> -->
-                        <p class="error hide">Your email is not valid</p>
+                        </div>
+                        <p class="error hide">Password is not corret</p>
                     </div>
-                    <div>
+                    <!-- <div>
                         <p>Not your computer? Use Guest mode to sign in privately.</p>
                         <div class="learn-more">
                             <a href="http://www.google.com/">learn more</a>
                         </div>
-                    </div>
+                    </div> -->
                     <div>
                         <div class="create-account">
-                            <a href="signup.html">Create account</a>
+                            <a href="forget_password.html" style="color: #1a73e8">forgot password?</a>
                         </div>
-                        <div class="next-button">
-                            <button id="next">Next</button>
+                        <div id="login-button" class="next-button">
+                            <button>Login</button>
                         </div>
                     </div>
                 </div>
@@ -65,12 +65,11 @@
                 </ul>
             </div>
         </div>
-
     </div>
     <script src="front-end/js/axios.min.js"></script>
     <script src="front-end/js/script.js"></script>
     <script>
-        pages.loadFor("index");
+        pages.loadFor("signin_password");
     </script>
 </body>
 </html>
