implemented the forget password feature

--- a/forget_password.html
+++ b/forget_password.html
@@ -29,7 +29,7 @@
                     <div class="inputs">
                         <div class="column">
                             <div>
-                                <label for="fav-color">What's your number?</label>
+                                <label for="fav-color">What's your lucky number?</label>
                             </div>
                             <div><input id="fav-color" placeholder="Enter your favourite color?" type="text"></div>
                         </div>
@@ -38,13 +38,14 @@
                             <div>
                                 <label for="password">Password</label>
                             </div>
-                            <div><input id="password" placeholder="Enter your password" type="password" disabled></div>
+                            <div><input required id="password" placeholder="Enter your password" type="password" disabled></div>
                         </div>
                         <div class="column">
                             <div>
                                 <label for="confirm-password">Confirm Password</label>
                             </div>
                             <div><input
+                                required
                                 id="confirm-password"
                                 placeholder="Confirm your password"
                                 type="password"
@@ -57,7 +58,7 @@
                         <div id="check-button" class="check-button">
                             <button>Check</button>
                         </div>
-                        <div class="login-button hide">
+                        <div id="change-password-button" class="change-password-button hide">
                             <button>Change Password</button>
                         </div>
                     </div>
