--- a/teacher_classwork.html
+++ b/teacher_classwork.html
@@ -110,10 +110,10 @@
         <div id="topic-modal" class="add-topic-modal hide">
             <div id="topic-box" class="box">
                 <p>Add topic</p>
-                <div><input placeholder="Topic" type="text"></div>
+                <div><input id="topic-area" placeholder="Topic" type="text"></div>
                 <div class="buttons">
                     <button class="cancel-button">Cancel</button>
-                    <button>Add</button>
+                    <button id="add-button">Add</button>
                 </div>
             </div>
         </div>
