--- a/classrooms.html
+++ b/classrooms.html
@@ -39,7 +39,36 @@
                 </div>
                 <div class="nav-profile-pic"><img
                     src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
-                    alt="profile picture"></div>
+                    alt="profile picture">
+                    <div class="manage-account-modal">
+                        <div class="content-box">
+                            <div class="user-data">
+                                <div class="profile-pic"><img
+                                    src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                                    alt="profile picture"></div>
+                                <div>
+                                    <div class="user-name">Mhmd Hussein</div>
+                                    <div class="user-email">mohammad.hussein377@gmail.com</div>
+                                </div>
+                            </div>
+                            <div>
+                                <button>Manage your google account</button>
+                            </div>
+                        </div>
+                        <div class="sign-out">
+                            <div>
+                                <i class="fa-solid fa-right-from-bracket"></i>
+                            </div>
+                            <div>Sign out</div>
+                        </div>
+                        <div>
+                            <span>Privacy policy</span>
+                            <span>.</span>
+                            <span>Terms of service</span>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
         <!-- <div class="arrow-icon">
@@ -100,37 +129,45 @@
                     </div>
                 </div>
             </div>
-            
+
             <!-- MODAL -->
             <div class="modal hide">
                 <div class="modal-box">
                     <div class="modal-header">Create class</div>
                     <form>
                         <div class="inputs">
-                        <div>
-                            <input required id="classname-input" placeholder="Class name (required)" type="text">
+                            <div>
+                                <input
+                                    required
+                                    id="classname-input"
+                                    placeholder="Class name (required)"
+                                    type="text">
+                            </div>
+                            <div>
+                                <input
+                                    required
+                                    id="googleMeetLink-input"
+                                    placeholder="Google meet link (required)"
+                                    type="text">
+                            </div>
+                            <div>
+                                <input id="section-input" placeholder="Section" type="text">
+                            </div>
+                            <div>
+                                <input id="subject-input" placeholder="Subject" type="text">
+                            </div>
+                            <div>
+                                <input id="room-input" placeholder="Room" type="text">
+                            </div>
                         </div>
-                        <div>
-                            <input required id="googleMeetLink-input" placeholder="Google meet link (required)" type="text">
+                        <div class="buttons">
+                            <div class="cancel-button">
+                                <button>Cancel</button>
+                            </div>
+                            <div class="create-button">
+                                <button>Create</button>
+                            </div>
                         </div>
-                        <div>
-                            <input id="section-input" placeholder="Section" type="text">
-                        </div>
-                        <div>
-                            <input id="subject-input" placeholder="Subject" type="text">
-                        </div>
-                        <div>
-                            <input id="room-input" placeholder="Room" type="text">
-                        </div>
-                    </div>
-                    <div class="buttons">
-                        <div class="cancel-button">
-                            <button>Cancel</button>
-                        </div>
-                        <div class="create-button">
-                            <button>Create</button>
-                        </div>
-                    </div>
                     </form>
                 </div>
             </div>
