--- a/teacher_people.html
+++ b/teacher_people.html
@@ -47,14 +47,10 @@
         <div class="people-content">
             <div class="teacher">
                 <div class="teacher-title">Teacher</div>
-                <div class="teacher-data">
-                    <div class="profile-pic">
-                        <img
-                            src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
-                            alt="profile picture">
-                    </div>
-                    <div class="teacher-name" id="tname">Charbel Dauod</div>
+                <div id="teach">
+                    
                 </div>
+                
             </div>
             <div class="students-section">
                 <div class="student-title">
