directing the user to the manage account page

--- a/classrooms.html
+++ b/classrooms.html
@@ -37,10 +37,10 @@
                 <div class="google-apps-icon">
                     <i class="fa-solid fa-border-none fa-lg"></i>
                 </div>
-                <div class="nav-profile-pic"><img
+                <div id="profile-pic" class="nav-profile-pic"><img
                     src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
                     alt="profile picture">
-                    <div class="manage-account-modal hide">
+                    <div id="manage-account-modal" class="manage-account-modal hide">
                         <div class="manage-account-modal-top">
                             <div class="content-box">
                                 <div class="user-data">
