implemented the manage account page

--- a/forget_password.html
+++ b/forget_password.html
@@ -21,7 +21,7 @@
                     <div class="verify-heading">Verify it's you</div>
                     <div class="user-email">
                         <i class="fa-solid fa-user"></i>
-                        <div class="email">mohammad.hussein377@gmail.com</div>
+                        <div class="email"></div>
                         <i class="fa-solid fa-caret-down"></i>
                     </div>
                 </div>
