--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                     <div class="inputs">
 
                         <div>
-                            <form><input minlength="6" id="email" type="email" placeholder="Email"></form>
-                            
+                            <form><input id="email" type="email" placeholder="Email"></form>
+
                             <!-- <p class="forgot-password">Forgot email?</p> -->
                         </div>
                         <!-- <div>
