implemented the sign-out functionality in the classrooms page

--- a/classrooms.html
+++ b/classrooms.html
@@ -57,7 +57,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="sign-out">
+                        <div id="sign-out" class="sign-out">
                             <div>
                                 <i class="fa-solid fa-right-from-bracket fa-lg"></i>
                             </div>
