Fixed get-clas-info class_id

--- a/teacher_stream.html
+++ b/teacher_stream.html
@@ -71,7 +71,7 @@
                             </div>
                         </div>
                         <div>
-                            <div class="google-meet-link">nhucw3p</div>
+                            <div id="class_code" class="google-meet-link">nhucw3p</div>
                             <div class="icon">
                                 <i class="fa-solid fa-expand"></i>
                             </div>
