adding the nb of students in the people section

--- a/teacher_people.html
+++ b/teacher_people.html
@@ -52,18 +52,14 @@
                 </div>                
             </div>
             <div class="students-section">
-                <div class="student-title">
-                    <div>Students</div>
-                    <div class="students-number">
-                        <i class="fa-solid fa-user-plus"></i>
-                    </div>
-                </div>
+                <div class="student-title"><div>Students</div><div id="nb-students" class="students-number">47 students</div></div>
                 <div class="students">
-                   <div id="student">
-
-                   </div>        
-                </div>
+                    <div id="student">
+                    </div>
+                </div> 
+        
             </div>
+        </div>
         </div>
     </div>
     <script src="front-end/js/axios.min.js"></script>
