implemented the structure of the modal to join a class

--- a/classrooms.html
+++ b/classrooms.html
@@ -135,7 +135,7 @@
                 </div>
             </div>
 
-            <!-- MODAL -->
+            <!--Crate Class MODAL -->
             <div class="modal hide">
                 <div class="modal-box">
                     <div class="modal-header">Create class</div>
@@ -174,6 +174,53 @@
                             </div>
                         </div>
                     </form>
+                </div>
+            </div>
+            <!-- JOIN CLASS MODAL -->
+            <div class="create-class-modal">
+                <div class="create-class-modal-header">
+                    <div>
+                        <div class="close-create-class-icon">
+                            <i class="fa-solid fa-x"></i>
+                        </div>
+                        <div>Join
+                        </div>
+                    </div>
+                    <div class="join-class-button">
+                        <button>Join class</button>
+                    </div>
+                </div>
+                <div class="create-class-modal-bottom">
+                    <div class="content">
+                        <div class="user-data">
+                            <p>You're currently signed in as</p>
+                            <div class="user">
+                                <div class="user-profile-pic"><img
+                                    src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                                    alt="profile picture">
+                                </div>
+                                <div class="user-data">
+                                    <p>Mhmd Hussein</p>
+                                    <p>mohammad.hussein377@gmail.com</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="class-code">
+                            <div>Class code</div>
+                            <p>Ask your teacher for the class code, then enter it here</p>
+                            <div class="class-code-input"><input id="class-code" placeholder="Class code" type="text"></div>
+                        </div>
+                        <div>
+                            <p>to sign in with a class code</p>
+                            <ul>
+                                <li>Use an authorized account</li>
+                                <li>Use a class code with 5-7 letters or numbers, and no spaces or symbols</li>
+                            </ul>
+                            <p>if you have trouble joining the class, go to the
+                                <span>Help Center article</span>
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
             <script src="front-end/js/axios.min.js"></script>
